<resources>
    <string name="app_name">FitFuel</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_no_account">No Account? Register here</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_age">Age must be between 10 and 100</string>
    <string name="invalid_height">Enter your height in cm</string>
    <string name="invalid_weight">Enter your weight in kg</string>

    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_about">About</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_workout">Workout</string>
    <!-- Strings used for fragments for navigation -->

    <string name="user_name">USER NAME</string>
    <string name="user_email">user@email.com</string>
</resources>